# candybot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
candybot/: config.py  hardware_probe.py
candybot/dashboard/: server.py  state.py  telemetry.py
candybot/dashboard/static/: app.js  avatar.js  index.html  style.css
candybot/models/wakeword/: hey_zen.onnx
candybot/orchestrator/: events.py  fsm.py  run.py
candybot/robot/: camera.py  policy_runtime.py  safety.py  scripted_actions.py  so101_controller.py
candybot/robot/waypoints/: candy.json  chocolate.json
candybot/voice/: asr.py  audio_io.py  dialogue.py  push_to_talk.py  tts.py  wakeword.py
configs/: candybot.yaml
docs/: ARCHITECTURE.md  SETUP_BOOTH_MACHINE.md  SETUP_DEV_MACHINE.md  SMOLVLA.md  TRAINING_MI300X.md  VERIFICATION.md  VOICE_MODES.md
scripts/: calibrate_arm.sh  capture_waypoints.py  install_udev_rules.sh  probe_hardware.py  pull_checkpoint.sh  push_dataset.sh  record_dataset.sh  record_dataset_smolvla.sh  setup_env.sh  teleop_test.sh
scripts/udev/: 99-so101.rules
tests/: test_dialogue_fsm.py  test_hardware_probe.py  test_orchestrator_fsm.py
training/: README.md  remote_env_setup.sh  sync_from_remote.sh  sync_to_remote.sh  train_act.sh  train_smolvla.sh  train_wakeword.sh  train_wakeword_local.sh
training/wakeword/: README.md  VENDORED.md  train_on_mi300x.ipynb
training/wakeword/real_samples/hey_zen/: README.md
training/wakeword/trainer/: README.md  compat.py  oww_wrapper.py  requirements.txt  train_wakeword.py
training/wakeword/trainer/configs/: hey_echo.yaml  (+1 more)
(+1 files in other folders)
